# hephaestus-jit

./: Cargo.toml  \
benches/: compile.rs  vulkan.rs
benches/mitsuba/: benchmark.py
grammars/: python.pest
hephaestus-jit/: Cargo.toml
hephaestus-jit/benches/: compile.rs  vulkan.rs
hephaestus-jit/benches/mitsuba/: .gitignore  benchmark.py  requirements.txt
hephaestus-jit/src/: compiler.rs  extent.rs  graph.rs  lib.rs  op.rs  prehashed.rs  record.rs  resource.rs  test.rs  trace.rs  traverse.rs  utils.rs  vartype.rs
hephaestus-jit/src/backend/: mod.rs  report.rs
hephaestus-jit/src/backend/cuda/: mod.rs  param_layout.rs
hephaestus-jit/src/backend/vulkan/: accel.rs  mod.rs  vkdevice.rs
hephaestus-jit/src/backend/vulkan/builtin/: compress.rs  cooperative_matrix.rs  fused_mlp.rs  mod.rs  prefix_sum.rs  utils.rs
hephaestus-jit/src/snapshots/: hephaestus_jit__test__conditional_scatter.snap  hephaestus_jit__test__max.snap  hephaestus_jit__test__scatter_chain1.snap  hephaestus_jit__test__select.snap
hephaestus-macros/: Cargo.toml
hephaestus-macros/src/: attributes.rs  funcs.rs  lib.rs  traits.rs  utils.rs
hephaestus-render/: Cargo.toml
hephaestus-render/src/: bsdf.rs  instance.rs  intersection.rs  lib.rs  ray.rs  scene.rs  spectrum.rs
hephaestus-rust/: Cargo.toml
hephaestus-rust/src/: accel.rs  lib.rs  matrix.rs  point.rs  texture.rs  traits.rs  var.rs  vector.rs
hephaestus-rust/src/snapshots/: hephaestus_rust__accel__test__trace_ray.snap
src/: compiler.rs  data.rs  extent.rs  ftrace.rs  graph.rs  ir.rs  lib.rs  main.rs  op.rs  record.rs  resource.rs  scheduler.rs  test.rs  trace.rs  tracer.rs  utils.rs  vartype.rs
src/backend/: mod.rs
src/backend/cuda/: codegen.rs  core.rs  cuda_core.rs  mod.rs  param_layout.rs
src/backend/cuda/test/: codegen.rs
src/backend/vulkan/: accel.rs  acceleration_structure.rs  accell.rs  buffer.rs  codegen.rs  codegen_old  compress.rs  context.rs  device.rs  glslext.rs  image.rs  mod.rs  param_layout.rs  physical_device.rs  pipeline.rs  pool.rs  prefix_sum.rs  presenter.rs  reduce.rs  rgraph.rs  shader_cache.rs  test.rs  utils.rs  vkdevice.rs
src/backend/vulkan/builtin/: compress.rs  cooperative_matrix.rs  div_round_up.rs  fused_mlp.rs  mod.rs  prefix_sum.rs  reduce.rs  utils.rs
src/backend/vulkan/builtin/kernels/: copy2d.glsl  (+6 more)
src/backend/vulkan/codegen/: mod.rs
src/backend/vulkan/kernels/: compress_large.glsl  compress_small.glsl  copy2instances.glsl  prefix_sum_large.glsl  prefix_sum_large_init.glsl  reduce.glsl
src/backend/vulkan/vulkan_core/: acceleration_structure.rs  buffer.rs  compute_pipeline.rs  device.rs  graph.rs  image.rs  mod.rs  physical_device.rs  pipeline.rs  pool.rs  presenter.rs  profiler.rs
src/frontend/python/: mod.rs
src/snapshots/: hephaestus_jit__test__conditional_scatter.snap  hephaestus_jit__test__conditional_scatter.snap.new  hephaestus_jit__test__conditionals.snap  hephaestus_jit__test__conditionals.snap.new  hephaestus_jit__test__scatter_chain1.snap  hephaestus_jit__test__scope.snap  hephaestus_jit__test__select.snap  hephaestus_jit__test__select.snap.new
(+29 files in other folders)
