[package]
name = "hephaestus-jit"
version = "0.1.0"
edition = "2021"

[lib]
name = "hephaestus_jit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

thiserror = "1.0.49"
resource-pool = { git = "https://github.com/DoeringChristian/resource-pool.git" }
log = "0.4.17"
bytesize = "1.2.0"
anyhow = "1.0.75"
insta = "1.33.0"
bytemuck = { version = "1.14.0", features = ["extern_crate_alloc", "derive"] }
inline-spirv = "0.1.6"
slotmap = "1.0.6"
itertools = "0.11.0"
pretty_env_logger = "0.5.0"
shaderc = "0.8.2"
glslang = { git = "https://github.com/DoeringChristian/glslang-rs.git" }
rand = "0.8.5"
approx = "0.5.1"
paste = "1.0.14"
lazy_static = "1.4.0"
half = { version = "2.3.1", features = ["num-traits", "bytemuck"]}
num-traits = "0.2.18"
once_cell = "1.19.0"
indexmap = "2.1.0"

# winit = "0.27.1"
# raw-window-handle = "0.5"

# spirv-tools = "0.9.0"
ash = { git = "https://github.com/DoeringChristian/ash.git", version = "0.37.0", features = ["linked", "debug"] }
# ash-window = { git = "https://github.com/DoeringChristian/ash.git", version = "0.12.0" }
vk-sync = { git = "https://github.com/DoeringChristian/vk-sync-rs.git", branch = "custom-ash", package = "vk-sync-fork" }
gpu-allocator = { git = "https://github.com/DoeringChristian/gpu-allocator.git", branch = "custom-ash" }
slice-group-by = { version = "0.3.1", features = ["nightly"]}

profiling = "1.0"
spirq = "1.1.1"
comemo = "0.4.0"
# test-log = "0.2.14"

[features]
default = ["profile-with-puffin"]
profile-with-puffin = ["profiling/profile-with-puffin"]
profile-with-optick = ["profiling/profile-with-optick"]
profile-with-superluminal = ["profiling/profile-with-superluminal"]
profile-with-tracing = ["profiling/profile-with-tracing"]
profile-with-tracy = ["profiling/profile-with-tracy"]

[dev-dependencies]
rusty-hook = "^0.11.2"
criterion = { version = "0.4", features = ["html_reports"] }
ndarray = "0.15.6"

puffin = { version = "0.19" }
puffin_http = { version = "0.16" }

[hooks]
pre-commit = "cargo test"

[[bench]]
name = "vulkan"
harness = false

[[bench]]
name = "compile"
harness = false
