[workspace]
members = [
    "hephaestus-jit", "hephaestus-macros", "hephaestus-render", "hephaestus-rust",
]
resolver = "2"

[workspace.dependencies]
jit = { path = "./hephaestus-jit", package = "hephaestus-jit" }
hephaestus-macros = { path = "./hephaestus-macros" }
hephaestus = { path = "./hephaestus-rust", package = "hephaestus-rust" }

mint = "0.5.9"
half = { version = "2.3.1", features = ["num-traits", "bytemuck"]}
insta = "1.33.0"
paste = "1.0.14"
